--- a/src/Resources/assets/css/base.css
+++ b/src/Resources/assets/css/base.css
@@ -1,270 +1,205 @@
-body{margin-top:20px;}
-.file-manager-actions {
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
+html,
+body {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+
 }
-.file-manager-actions > * {
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
+:root {
+    --input-border: #e3dfdf;
+    --loading:#206bc4
 }
-.file-manager-container {
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
+.input-group {
+    border: 1px solid var(--input-border);
+    border-radius: 5px;
 }
-.file-item {
+
+input.form-control {
+    border:none;
+    border-right: 1px solid  var(--input-border);
+}
+input.form-control:focus {
+    outline: none;
+    box-shadow: none;
+}
+
+
+.nkd-media-container {
+    height: calc(100vh - 16rem);
     position: relative;
-    z-index: 1;
-    -ms-flex: 0 0 auto;
-    flex: 0 0 auto;
-    border: 1px solid #eee;
-    cursor: pointer;
 }
-.file-item:hover,
-.file-item.focused {
-    border-color: rgba(0, 0, 0, 0.05);
-}
-.file-item.focused {
-    z-index: 2;
-}
-.file-item * {
-    -ms-flex-negative: 0;
-    flex-shrink: 0;
-    text-decoration:none;
-}
-.dark-style .file-item:hover,
-.dark-style .file-item.focused {
-    border-color: rgba(255, 255, 255, 0.2);
-}
-.file-item-checkbox {
-    margin: 0 !important;
-}
-.file-item-select-bg {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: -1;
-    opacity: 0;
-}
-.file-item-img {
-    background-color: transparent;
-    background-position: center center;
-    background-size: cover;
-}
-.file-item-name {
-    display: block;
+.nkd-media-main {
+    height: 100%;
     overflow: hidden;
-}
-.file-manager-col-view .file-item {
-    margin: 0 0.25rem 0.25rem 0;
-    padding: 1.25rem 0 1rem 0;
-    width: 9rem;
-    text-align: center;
-}
-[dir="rtl"] .file-manager-col-view .file-item {
-    margin-right: 0;
-    margin-left: 0.25rem;
-}
-.file-manager-col-view .file-item-img,
-.file-manager-col-view .file-item-icon {
-    display: block;
-    margin: 0 auto 0.75rem auto;
-    width: 4rem;
-    height: 4rem;
-    font-size: 2.5rem;
-    line-height: 4rem;
-}
-.file-manager-col-view .file-item-level-up {
-    font-size: 1.5rem;
-}
-.file-manager-col-view .file-item-checkbox,
-.file-manager-col-view .file-item-actions {
-    position: absolute;
-    top: 6px;
-}
-.file-manager-col-view .file-item-checkbox {
-    left: 6px;
-}
-[dir="rtl"] .file-manager-col-view .file-item-checkbox {
-    right: 6px;
-    left: auto;
-}
-.file-manager-col-view .file-item-actions {
-    right: 6px;
-}
-[dir="rtl"] .file-manager-col-view .file-item-actions {
-    right: auto;
-    left: 6px;
-}
-.file-manager-col-view .file-item-name {
+    position: relative;
     width: 100%;
-}
-.file-manager-col-view .file-manager-row-header,
-.file-manager-col-view .file-item-changed {
-    display: none;
-}
-.file-manager-row-view .file-manager-row-header,
-.file-manager-row-view .file-item {
-    display: -ms-flexbox;
     display: flex;
-    -ms-flex-align: center;
-    align-items: center;
-    margin: 0 0 0.125rem 0;
-    padding: 0.25rem 3rem 0.25rem 2.25em;
+    flex-direction: column;
+}
+.nkd-media-main .nkd-media-wrapper {
+    display: flex;
+    flex-direction: row;
+    flex-grow: 1;
+    height: 200px;
+}
+.nkd-media-main .media-details{
+    flex-direction: column;
+    min-width: 250px;
+    overflow: hidden;
+    overflow-y: auto;
+    transition: all .3s ease-in-out;
+    width: 250px;
+    height: 100%;
+    border-right: 1px solid var(--input-border);
+}
+.nkd-media-main .media-thumbnail{
+    overflow: hidden;
+    position: relative;
+    min-width: 250px;
+    width: 100%;
+    border-bottom: 1px solid var(--input-border);
+}
+.nkd-media-main .media-description {
+    padding: 10px;
+    position: relative;
+    min-width: 250px;
     width: 100%;
 }
-[dir="rtl"] .file-manager-row-view .file-manager-row-header,
-[dir="rtl"] .file-manager-row-view .file-item {
-    padding-right: 2.25em;
-    padding-left: 3rem;
-}
-.file-manager-row-view .file-item-img,
-.file-manager-row-view .file-item-icon {
+.nkd-media-main .media-thumbnail:before {
+    content: "";
     display: block;
-    margin: 0 1rem;
-    width: 2rem;
-    height: 2rem;
-    text-align: center;
-    font-size: 1.25rem;
-    line-height: 2rem;
+    height: 0;
+    padding-bottom: 100%;
 }
-.file-manager-row-view .file-item-level-up {
-    font-size: 1rem;
-}
-.file-manager-row-view .file-item-checkbox,
-.file-manager-row-view .file-item-actions {
+.nkd-media-main .media-thumbnail img,.nkd-media-main  .media-thumbnail svg {
+    display: inline-block;
+    left: 50%;
     position: absolute;
     top: 50%;
-    -webkit-transform: translateY(-50%);
-    transform: translateY(-50%);
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
 }
-.file-manager-row-view .file-item-checkbox {
-    left: 10px;
+.nkd-media-main .media-thumbnail  svg {
+    height: 6rem;
+    width: 6rem;
 }
-[dir="rtl"] .file-manager-row-view .file-item-checkbox {
-    right: 10px;
-    left: auto;
+
+#status_processing {
+    background-color: #00000040;
+    bottom: 0;
+    height: 100%!important;
+    left: 0!important;
+    margin-inline-start:unset!important;margin-top: unset!important;
+    position: absolute;
+    right: 0;
+    border:unset;
+    top: 0!important;
+    width: 100%!important;
+    z-index: 1
 }
-.file-manager-row-view .file-item-actions {
-    right: 10px;
+
+#status_processing>div {
+    display: none
 }
-[dir="rtl"] .file-manager-row-view .file-item-actions {
-    right: auto;
-    left: 10px;
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
 }
-.file-manager-row-view .file-item-changed {
-    display: none;
-    margin-left: auto;
-    width: 10rem;
+#status_processing:after {
+    animation: loading-spinner .9s linear infinite;
+    border: 3px solid;
+    border-color: var(--loading) transparent var(--loading) transparent;
+    border-radius: 50%;
+    content: " ";
+    display: block;
+    height: 40px;
+    inset-inline-end: 50%;
+    position: absolute;
+    top: 50%;
+    width: 40px
 }
-[dir="rtl"] .file-manager-row-view .file-item-changed {
-    margin-right: auto;
-    margin-left: 0;
+
+#status_processing {
+    z-index: 999;
+    margin: auto;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    right: 0;
 }
-.file-manager-row-view .file-item-name {
-    width: calc(100% - 4rem);
+
+#status_processing>div:last-child {
+    position: relative;
+    width: 80px;
+    height: 15px;
+    margin: 1em auto
 }
-.file-manager-row-view .file-manager-row-header {
-    border-bottom: 2px solid rgba(0, 0, 0, 0.05);
-    font-weight: bold;
+
+#status_processing>div:last-child>div {
+    position: absolute;
+    top: 0;
+    width: 13px;
+    height: 13px;
+    border-radius: 50%;
+    background: rgb(13, 110, 253);
+    background: rgb(var(--loading));
+    animation-timing-function: cubic-bezier(0, 1, 1, 0)
 }
-.file-manager-row-view .file-manager-row-header .file-item-name {
-    margin-left: 4rem;
+
+#status_processing>div:last-child>div:nth-child(1) {
+    left: 8px;
+    animation: datatables-loader-1 .6s infinite
 }
-[dir="rtl"] .file-manager-row-view .file-manager-row-header .file-item-name {
-    margin-right: 4rem;
-    margin-left: 0;
+
+#status_processing>div:last-child>div:nth-child(2) {
+    left: 8px;
+    animation: datatables-loader-2 .6s infinite
 }
-.light-style .file-item-name {
-    color: #4e5155 !important;
+
+#status_processing>div:last-child>div:nth-child(3) {
+    left: 32px;
+    animation: datatables-loader-2 .6s infinite
 }
-.light-style .file-item.selected .file-item-select-bg {
-    opacity: 0.15;
+
+#status_processing>div:last-child>div:nth-child(4) {
+    left: 56px;
+    animation: datatables-loader-3 .6s infinite
 }
-@media (min-width: 768px) {
-    .light-style .file-manager-row-view .file-item-changed {
-        display: block;
+@keyframes datatables-loader-2 {
+    0% {
+        transform: translate(0, 0)
     }
-    .light-style .file-manager-row-view .file-item-name {
-        width: calc(100% - 15rem);
+
+    100% {
+        transform: translate(24px, 0)
     }
 }
-@media (min-width: 992px) {
-    .light-style .file-manager-col-view .file-item-checkbox,
-    .light-style .file-manager-col-view .file-item-actions {
-        opacity: 0;
+
+@keyframes loading-spinner {
+    0% {
+        transform: rotate(0deg)
     }
-    .light-style .file-manager-col-view .file-item:hover .file-item-checkbox,
-    .light-style .file-manager-col-view .file-item.focused .file-item-checkbox,
-    .light-style .file-manager-col-view .file-item.selected .file-item-checkbox,
-    .light-style .file-manager-col-view .file-item:hover .file-item-actions,
-    .light-style .file-manager-col-view .file-item.focused .file-item-actions,
-    .light-style .file-manager-col-view .file-item.selected .file-item-actions {
-        opacity: 1;
+
+    to {
+        transform: rotate(1turn)
     }
 }
-.material-style .file-item-name {
-    color: #4e5155 !important;
-}
-.material-style .file-item.selected .file-item-select-bg {
-    opacity: 0.15;
-}
-@media (min-width: 768px) {
-    .material-style .file-manager-row-view .file-item-changed {
-        display: block;
-    }
-    .material-style .file-manager-row-view .file-item-name {
-        width: calc(100% - 15rem);
-    }
-}
-@media (min-width: 992px) {
-    .material-style .file-manager-col-view .file-item-checkbox,
-    .material-style .file-manager-col-view .file-item-actions {
-        opacity: 0;
-    }
-    .material-style .file-manager-col-view .file-item:hover .file-item-checkbox,
-    .material-style .file-manager-col-view .file-item.focused .file-item-checkbox,
-    .material-style .file-manager-col-view .file-item.selected .file-item-checkbox,
-    .material-style .file-manager-col-view .file-item:hover .file-item-actions,
-    .material-style .file-manager-col-view .file-item.focused .file-item-actions,
-    .material-style .file-manager-col-view .file-item.selected .file-item-actions {
-        opacity: 1;
-    }
-}
-.dark-style .file-item-name {
-    color: #fff !important;
-}
-.dark-style .file-item.selected .file-item-select-bg {
-    opacity: 0.15;
-}
-@media (min-width: 768px) {
-    .dark-style .file-manager-row-view .file-item-changed {
-        display: block;
-    }
-    .dark-style .file-manager-row-view .file-item-name {
-        width: calc(100% - 15rem);
-    }
-}
-@media (min-width: 992px) {
-    .dark-style .file-manager-col-view .file-item-checkbox,
-    .dark-style .file-manager-col-view .file-item-actions {
-        opacity: 0;
-    }
-    .dark-style .file-manager-col-view .file-item:hover .file-item-checkbox,
-    .dark-style .file-manager-col-view .file-item.focused .file-item-checkbox,
-    .dark-style .file-manager-col-view .file-item.selected .file-item-checkbox,
-    .dark-style .file-manager-col-view .file-item:hover .file-item-actions,
-    .dark-style .file-manager-col-view .file-item.focused .file-item-actions,
-    .dark-style .file-manager-col-view .file-item.selected .file-item-actions {
-        opacity: 1;
-    }
+
+.media-grid li {
+    display: block;
+    float: left;
+    margin-bottom: 15px;
+    padding: 0 5px;
+    width: 12.5%;
 }
