change conditions in view

--- a/src/Resources/assets/css/base.css
+++ b/src/Resources/assets/css/base.css
@@ -581,6 +581,7 @@ body {
 }
 .nkd-media-breadcrumb .breadcrumb a {
     color: #206bc4;
+    text-decoration: none;
 }
 
 .nkd-media-breadcrumb .breadcrumb li:not(:nth-child(1)) a {
